synopsis:     "Sexp-based Protocol for machine-based interaction with the Coq Proof Assistant"
name:         "coq-serapi"
opam-version: "2.0"
maintainer:   "e@x80.org"
authors:      "Emilio Jesús Gallego Arias"
homepage:     "https://github.com/ejgallego/coq-serapi"
bug-reports:  "https://github.com/ejgallego/coq-serapi/issues"
dev-repo:     "git+https://github.com/ejgallego/coq-serapi.git"
license:      "GPL 3"

depends: [
  "ocaml"         { >= "4.06.0" }
  "coq"           { >= "8.9.0" & < "8.10" }
  "cmdliner"
  "sexplib"
  "dune"          { build & >= "1.2.0" }
  "ppx_import"    { build & >= "1.5-3" }
  "ppx_deriving"  { build & >= "4.2.1"}
  "ppx_sexp_conv" { >= "v0.11.0" }
]

build:    [ "dune" "build" "-p" "%package" ]
