opam-version: "2.0"
maintainer:   "e@x80.org"
homepage:     "https://github.com/ejgallego/coq-serapi"
bug-reports:  "https://github.com/ejgallego/coq-serapi/issues"
dev-repo:     "git+https://github.com/ejgallego/coq-serapi.git"
license:      "LGPL-2.1-or-later"
doc:          "https://ejgallego.github.io/coq-serapi/"

synopsis:     "Serialization library and protocol for machine interaction with the Coq proof assistant"
description:  """
SerAPI is a library for machine-to-machine interaction with the
Coq proof assistant, with particular emphasis on applications in IDEs,
code analysis tools, and machine learning. SerAPI provides automatic
serialization of Coq's internal OCaml datatypes from/to JSON or
S-expressions (sexps).
"""

authors: [
  "Emilio Jesús Gallego Arias"
  "Karl Palmskog"
  "Clément Pit-Claudel"
  "Kaiyu Yang"
]

depends: [
  "dune"                {           >= "2.9.1"                     }
  "ocaml"               {           >= "4.12.0"                    }
  "coq"                 {           >= "8.20" & < "8.21" | = "dev" }
  # We vendor this for now
  # "coq-lsp"             {           >= "0.2.0"                     }
  "cmdliner"            {           >= "1.1.0"                     }
  "ocamlfind"           {           >= "1.8.0"                     }
  "sexplib"             {           >= "v0.13.0"                   }
  "dune"                {           >= "2.0.1"                     }
  "cmdliner"            {           >= "1.1.0"               }
  "ocamlfind"           {           >= "1.8.0"               }
  "ppx_import"          { build   & >= "1.5-3" & < "2.0"     }
  "ppx_deriving"        {           >= "4.2.1"               }
  "sexplib"             {           >= "v0.13.0"             }
  "ppx_sexp_conv"       {           >= "v0.13.0"             }
]

conflicts: [
  "result" {< "1.5"}
]

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ [ "dune" "runtest" "-p" name "-j" jobs ] ]
