(library
 (name sertop)
 (public_name coq-serapi.sertop_v8_12)
 (modules :standard \ sertop_bin sercomp sertok sername sertop_js sertop_async)
 (preprocess (staged_pps ppx_import ppx_sexp_conv))
 (libraries findlib.dynload cmdliner serapi serlib serlib_ltac))

(executables
 (public_names sertop sercomp sertok sername)
 (names sertop_bin sercomp sertok sername)
 (modules sertop_bin sercomp sertok sername)
 (preprocess (staged_pps ppx_import ppx_sexp_conv))
 (link_flags -linkall)
 (libraries sertop))

(rule
 (targets ser_version.ml)
 (action (write-file %{targets} "let ser_git_version = \"%{version:coq-serapi}\";;")))
