(rule
 (alias runtest)
 (deps
  (package coq-serapi)
  (:input ab.v))
 (action (ignore-outputs
           (bash "%{bin:sercomp} --quick %{input}"))))

(rule
 (alias runtest)
 (deps
  (package coq-serapi)
  (:input assoc.v))
 (action (ignore-outputs
           (bash "%{bin:sercomp} --quick %{input}"))))

(rule
 (alias runtest)
 (deps
  (package coq-serapi)
  (:input ordered.v))
 (action (ignore-outputs
           (bash "%{bin:sercomp} --quick %{input}"))))

(rule
 (alias runtest)
 (deps
  (package coq-serapi)
  (:input reserved.v))
 (action (ignore-outputs
           (bash "%{bin:sercomp} --quick %{input}"))))
