(library
 (name serlib_ltacX_common)
 (public_name coq-serapi.serlib.ltacX_common)
 (synopsis "Serialization Library for Coq [LTACX_common plugin]")
 (preprocess (staged_pps ppx_import ppx_sexp_conv ppx_deriving_yojson ppx_hash ppx_compare))
 (libraries coq-core.plugins.ltacX_common serlib sexplib))
